<resources>
    <string name="app_name">FinalP</string>
    <string name="title_activity_nav">nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">게시판</string>
    <string name="menu_notice">공지사항</string>
    <string name="menu_license">오픈소스 라이센스</string>
    <string name="menu_settings">설정</string>
    <string name="menu_myinfo">내 정보</string>
    <string name="menu_logout">로그아웃</string>
</resources>
